<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/soundC"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="30dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="25dip"
        android:text="@string/main_title"
        android:textSize="24.5sp" />

    <TableLayout
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/exit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_label" />

            <Button
                android:id="@+id/new_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_game_label" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/about_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_label" />

            <Button
                android:id="@+id/continue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_label" />

        </TableRow>

    </TableLayout>

    <CheckBox
        android:id="@+id/soundCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sound" />

</LinearLayout>